--- a/imeb/main.css
+++ b/imeb/main.css
@@ -40,8 +40,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #CB4B19;
   font-size: 1.75em;
   margin-bottom: .4em;
+  line-height : 1em;
 }
- 
+h2 {
+  font-size: 1em;
+}
 p {
   margin-bottom: .5em;
 } 
@@ -50,7 +53,7 @@ p {
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
-  margin-top:10px;
+  margin-top:30px;
 }
  
 @media all and (max-width: 500px) {
