--- a/imeb/imeb.css
+++ b/imeb/imeb.css
@@ -3,9 +3,15 @@ rect.disabled {
 }
 #charts{
 	padding: 10px 0 0 0;
+	/*background: red;*/
 }
 #nav{
 	padding: 10px 0;
+	clear: both;
+}
+#pie01, #pie02, #pie03{
+	float: left;
+	margin: 0 1px 0 0;
 }
 div.selected {
   background: none !important;
@@ -16,11 +22,9 @@ div.tPie {
 	/*color: #CB4B19;*/
 	background: #E7E0CB;
 	margin: 0 0 1px 0;
-}
-div.tPie {
-  text-align: center;
-  font-weight: normal;
-  font-size: .6em;
-  font-family: "Exo 2", "Helvetica Neue", Helvetica, sans-serif;
-  /*font-style : italic;*/
+	text-align: center;
+	font-weight: normal;
+	font-size: .6em;
+	font-family: "Exo 2", "Helvetica Neue", Helvetica, sans-serif;
+	/*font-style : italic;*/
 }
