--- a/imeb/main.css
+++ b/imeb/main.css
@@ -37,7 +37,7 @@ strong {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Slab', "Helvetica Neue", Helvetica, sans-serif;
   font-weight: 700;
-  color: #CB4B19;
+  color: #f08f67;
   font-size: 1.75em;
   margin-bottom: .4em;
   line-height : 1em;
