--- a/small_data/css/main.css
+++ b/small_data/css/main.css
@@ -82,12 +82,16 @@ ul{
 } 
 #composers{
 	background: #2ecc71; /*emerald green*/
+
+	-webkit-column-count: 5; /* Chrome, Safari, Opera */
+    -moz-column-count: 5; /* Firefox */
+    column-count: 5;
 	
 }
 #selection{
 	background: orange; /*orange carrot*/
 }
-#selection p, #composers p{
+#selection p{
 	padding: 0;
 	margin: 0;
 }
