--- a/small_data/css/main.css
+++ b/small_data/css/main.css
@@ -93,7 +93,7 @@ ul{
 	word-wrap: break-word;
 
 	padding-top: 10px;
-	padding-bottom: 5px;
+	padding-bottom: 10px;
 
 	width: 420px;
 	color: white;
@@ -116,10 +116,10 @@ ul{
     column-count: 5;
 	
 	padding-top: 10px;
-	padding-bottom: 5px;
+	padding-bottom: 10px;
 
 	color: #16a085;
-	/*margin-bottom: 5px;*/
+	margin-bottom: 10px;
 }
 #selection{
 	background: orange; /*orange carrot*/
