--- a/small_data/css/animated_data.css
+++ b/small_data/css/animated_data.css
@@ -9,6 +9,7 @@
 
 	padding: 0 10px 0 10px;
 	margin: 0;
+	clear:left;
 	float: left;
 	
 	word-wrap: break-word;
@@ -16,6 +17,10 @@
 	background: orange; /*orange carrot*/
 	max-width: 380px;
 	
+}
+#selection p{
+	padding: 0;
+	margin: 0;
 }
 #titles{
 
