--- a/small_data/css/index.css
+++ b/small_data/css/index.css
@@ -9,19 +9,20 @@
 	max-width: 330px;/*-20 padding*/
 	padding: 0 10px 0 10px;
 	word-wrap: break-word;
+	float: left;
+	clear:left;
+}
+#selection p, #cookies p{
+	padding: 0;
+	margin: 0;
 }
 #selection{
 	margin: 1px 0;
-	float: left;
-	
 	background: orange; /*orange carrot*/
-	
+
 }
 #titles{
-
 	margin: 0;
-	float: left;
-	/*clear: both;*/
 
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -31,8 +32,6 @@
 }
 #cookies{
 	margin: 1px 0 0 0;
-	clear: left;
-	float: left;
 	background: #2ecc71; /*emerald green*/
 	/*text-align: left; */
 }
