add names and edit sma

--- a/small_data/css/animated_data.css
+++ b/small_data/css/animated_data.css
@@ -15,7 +15,7 @@
 	word-wrap: break-word;
 
 	background: orange; /*orange carrot*/
-	max-width: 380px;
+	/*max-width: 380px;*/
 	
 }
 #selection p{
