--- a/small_data/css/network.css
+++ b/small_data/css/network.css
@@ -1,3 +1,15 @@
+#commons{
+	padding: 5px;
+	min-width: 400px;
+	min-height: 40px;
+	background: pink;
+	float: left;
+	display: inline;
+}
+#commons p {
+	padding: 0;
+	margin: 0;
+}
 #ctrl_bar{
 	/*height:80px;*/
 }
